21: Fix misaligned navbar Library button and separator alignment
Replace <button> in navbar with <a> tag + hidden form to avoid
Safari's button rendering quirks. Use inline-flex on navbar containers
to vertically center separators with nav links.

Closes #18, closes #21.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -120,7 +120,8 @@ ol.book-list li form {
 }
 
 .navbar-left, .navbar-right {
-  display: inline;
+  display: inline-flex;
+  align-items: center;
 }
 
 .navbar-link {
@@ -139,29 +140,6 @@ ol.book-list li form {
 }
 
 .navbar-link:hover {
-  text-decoration: underline;
-}
-
-.navbar-link-button {
-  background: none;
-  border: none;
-  color: white;
-  font: inherit;
-  cursor: pointer;
-  padding: 0;
-  display: inline-block;
-}
-
-.navbar-link-button::after {
-  content: attr(data-text);
-  font-weight: bold;
-  visibility: hidden;
-  display: block;
-  height: 0;
-  overflow: hidden;
-}
-
-.navbar-link-button:hover {
   text-decoration: underline;
 }
 
